<resources>
    <string name="app_name">Target</string>

    <!-- Startup strings -->
    <string name="title_precision">Precision</string>
    <string name="title_weapons">Vapen</string>
    <string name="title_ammunition">ammunition</string>
    <string name="title_statistics">Statistik</string>
    <string name="title_settings">Inställningar</string>

    <string-array name="startup_options">
        <item>Precision</item>
        <item>Vapen</item>
        <item>Ammunition</item>
        <item>Statistik</item>
        <item>Inställningar</item>
    </string-array>

    <!-- Principles -->
    <string-array name="principles">
        <item>Precision</item>
        <item>Duell</item>
    </string-array>
    <string name="principle_principles">Moment</string>
    <string name="principle_precision">Precision</string>
    <string name="principle_duell">Duell</string>

    <!-- Target view strings -->
    <string name="number_of_bullets">Kulor: %1$d</string>
    <string name="points">Poäng: %1$d</string>
    <string name="points_short">%dp</string>
    <string name="save">Spara</string>
    <string name="max_bullets_reached">Kan inte lägga till fler kulor</string>

    <!-- Precision selection strings -->
    <string-array name="precision_selection">
        <item>Tävling</item>
        <item>Träning</item>
        <item>Fristående serier</item>
    </string-array>
    <string-array name="precision_selection_desc">
        <item>7 serier om 5 skott</item>
        <item>7 serier om 5 skott</item>
        <item>Obegränsat antal serier om 5 skott</item>
    </string-array>

    <!-- Precision round summary strings -->
    <string name="point_distribution">Poängdistribution</string>
    <string name="hit_distribution">Träffbild</string>
    <string name="hit_center_of_mass">Träfftyngdpunkt</string>
    <string name="max_spread">Max spridning: %1$.2fcm</string>
    <string name="mean_spread">Medelspridning: %1$.2fcm</string>
    <string name="up_left_offset">Tyngdpunkt: %1$.2fcm över och %2$.2fcm till vänster om centrum.</string>
    <string name="up_right_offset">Tyngdpunkt: %1$.2fcm över och %2$.2fcm till höger om centrum.</string>
    <string name="down_left_offset">Tyngdpunkt: %1$.2fcm under och %2$.2fcm till vänster om centrum.</string>
    <string name="down_right_offset">Tyngdpunkt: %1$.2fcm under och %2$.2fcm till höger om centrum.</string>
    <string name="standard_deviation">Standardavvikelse: %1$.2fcm</string>

    <!-- Statistics strings -->
    <string name="progress">Utveckling</string>

    <!-- GraphView strings -->
    <string name="legend_score">Poäng</string>
    <string name="legend_average_score">Medel</string>

    <!-- Weapon types, must match the order of the items in
         WeaponType -->
    <string-array name="weapon_type">
        <item>Pistol</item>
        <item>Revolver</item>
    </string-array>

    <!-- Add weapon strings -->
    <string name="weapon_make_and_model">Tillverkare och modellbeteckning</string>
    <string name="weapon_manufacturer_error">Tillverkare måste anges</string>
    <string name="weapon_type">Typ</string>
    <string name="weapon_caliber">Kaliber</string>

    <!-- Add ammunition strings -->
    <string name="ammunition_manufacturer">Tillverkare och produktnamn</string>
    <string name="ammunition_manufacturer_error">Tillverkare måste anges</string>
    <string name="ammunition_type">Typ</string>
    <string name="ammunition_caliber">Kaliber</string>
    <string name="ammunition_velocity">Utgångshastighet (m/s)</string>
    <string name="ammunition_velocity_error">Utgångshastighet måste anges</string>
    <string name="ammunition_grains">Projektilvikt (g)</string>
    <string name="ammunition_grains_error">Projektilvikt måste</string>

    <!-- Load out strings -->
    <string name="weapon">Vapen</string>
    <string name="ammunition">Ammunition</string>

    <!-- Weapon display strings -->
    <string name="weapon_display_principle_button">Moment</string>
    <string name="weapon_display_ammunition_button">Ammunition</string>

    <!-- Generic strings -->
    <string name="generic_finish">Avsluta</string>
</resources>