<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/precision_round_summary_layout_score"
        style="@style/TargetFontMedium"
        android:text="@string/points"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precision_round_summary_layout_max_spread"
        style="@style/TargetFontSmall"
        android:text="@string/max_spread"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precision_round_summary_layout_avg_spread"
        style="@style/TargetFontSmall"
        android:text="@string/mean_spread"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precision_round_summary_layout_offset"
        style="@style/TargetFontSmall"
        android:text="@string/mean_spread"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precision_round_summary_layout_points_distribution_button"
        android:text="@string/point_distribution"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precision_round_summary_layout_hits_distribution_button"
        android:text="@string/hit_distribution"/>

</LinearLayout>