<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/target_layout_nbr_bullets"
                style="@style/TargetFontSmall"
                android:text="@string/number_of_bullets"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/target_layout_nbr_bullets"
                android:id="@+id/target_layout_score"
                style="@style/TargetFontSmall"
                android:text="@string/points"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            style="@style/ButtonStyle"
            android:id="@+id/target_layout_save_button"
            android:text="@string/save"/>
    </RelativeLayout>


    <se.thirdbase.target.view.PrecisionTargetView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/target_layout_target_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            style="@style/ButtonStyle"
            android:src="@drawable/edit"
            android:id="@+id/target_layout_button0"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            style="@style/ButtonStyle"
            android:src="@drawable/add"
            android:id="@+id/target_layout_button1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:background="@null"
            android:id="@+id/target_layout_button2"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:background="@null"
            android:id="@+id/target_layout_button3"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:background="@null"
            android:id="@+id/target_layout_button4"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:background="@null"
            android:id="@+id/target_layout_button5"/>
    </LinearLayout>
</LinearLayout>